--- a/pancake.html
+++ b/pancake.html
@@ -1,5 +1,5 @@
 <h1>Easy pancake</h1>
-<img src="" alt="">
+<img src="./imgs/pancake.png" alt="pancake_img">
 <h2></h2>
 <p>
 
@@ -7,24 +7,26 @@
 
 <h3>Ingredients</h3>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>100g plain flour</li>
+    <li>2 large eggs</li>
+    <li>300ml milk</li>
+    <li>1 tbsp sunflower or vegetable oil, plus a little extra for frying
+    </li>
+    <li>lemon wedges to serve (optional)
+    </li>
+    <li>caster sugar to serve (optional)
+    </li>
 </ul>
 
 
 <h3>Steps</h3>
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><strong>1.</strong>Put 100g plain flour, 2 large eggs, 300ml milk, 1 tbsp sunflower<br>
+                or vegetable oil and a pinch of salt into a bowl or large jug, then whisk to a smooth batter. </li>
+    <li><strong>2.</strong>Set aside for 30 mins to rest if you have time, or start cooking straight away. </li>
+    <li><strong>3.</strong>Set a medium frying pan or crêpe pan over a medium heat and carefully wipe it with some oiled kitchen paper. </li>
+    <li><strong>4.</strong>When hot, cook your pancakes for 1 min on each side until golden, keeping them warm in a low oven as you go. </li>
+    <li><strong>5.</strong>Serve with lemon wedges and caster sugar, or your favourite filling. Once cold, you can layer the pancakes between baking parchment, <br>
+                then wrap in cling film and freeze for up to 2 months. </li>
+
 </ol>
