--- a/pasta.html
+++ b/pasta.html
@@ -1,5 +1,5 @@
 <h1>Pasta</h1>
-<img src="./imgs/pasta.jpeg" alt="Nice pasta dude">
+<img src="./imgs/pasta.jpeg" alt="pasta_img">
 <h2>Description</h2>
 <p>
   This recipe is too easy, will just put water whith salt in the cooking pot <br>
