--- a/pollo.html
+++ b/pollo.html
@@ -1,5 +1,5 @@
 <h1> Pollo a la naranja china</h1>
-<img src="" alt="">
+<img src="./imgs/pollo-agridulce-chino.jpg" alt="pollo_agridulce">
 <h2>Description</h2>
 <p>
     El pollo a la naranja es una comida típica de Asia. No tiene nada que ver con el pato al horno a la naranja, plato típico francé<br>
