--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipies</title>
+    <title>Recepies</title>
 </head>
 <body>
-    <h1>Odin Recipies</h1>
-    <a href="pasta.html"></a>
-    <a href="pancake.html"></a>
+    <center>
+    <h1>Odin Recepies</h1>
+        <a href="./recipies/pancake.html">Pancake</a>
+        <a href="./recipies/pollo.html">Pollo chino</a>
+        <a href="./recipies/pasta.html">Pasta</a>
+</center>
+   
 </body>
 </html>
