--- a/recipies/pasta.html
+++ b/recipies/pasta.html
@@ -4,7 +4,7 @@
 <p>
   This recipe is too easy, will just put water whith salt in the cooking pot <br>
   then after is boiled put pasta there and let it rest for aprox 12 mins <br>
-  then you slip the water, thats it you put the tomato at your choice
+  then you slip the water, thats it you put the tomato at your choice.
 
 </p>
 
