--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 <body>
     <center>
     <h1>Odin Recepies</h1>
+    <p>
+        Si quieres una hermoso desayuno facil:
         <a href="./recipies/pancake.html">Pancake</a>
+
+    </p>
+    <p>
+
+        Si quieres proteina y variedad:
         <a href="./recipies/pollo.html">Pollo chino</a>
+    </p>
+    <p>
+        Si quieres un almuerzo simple: 
         <a href="./recipies/pasta.html">Pasta</a>
+
+    </p>
 </center>
    
 </body>
