--- a/recipies/pancake.html
+++ b/recipies/pancake.html
@@ -1,5 +1,5 @@
 <h1>Easy pancake</h1>
-<img src="./imgs/pancake.png" alt="pancake_img">
+<img src="../imgs/pancake.png" alt="pancake_img">
 <h2>Description</h2>
 <p>
     Learn a skill for life with our foolproof crêpe recipe that ensures perfect pancakes every time, <br>
