--- a/recipies/pollo.html
+++ b/recipies/pollo.html
@@ -1,5 +1,6 @@
+
 <h1> Pollo a la naranja china</h1>
-<img src="./imgs/pollo-agridulce-chino.jpg" alt="pollo_agridulce">
+<img src="../imgs/pollo-agridulce-chino.jpg" alt= "pollo_agridulce">
 <h2>Description</h2>
 <p>
     El pollo a la naranja es una comida típica de Asia. No tiene nada que ver con el pato al horno a la naranja, plato típico francé<br>
@@ -23,22 +24,23 @@
 
 <h3>Steps</h3>
 <ol>
-    <li><strong>1.</strong>Preparamos la salsa. Para ello, exprimimos las naranjas en un <br>
+    <li>Preparamos la salsa. Para ello, exprimimos las naranjas en un <br>
         Añadimos la salsa de soja, los dientes de ajo picados, el chorrito de vinagre,<br>
         el azúcar, la maizena, que espesará la salsa en la cocción y un poco de sal y <br>
         de pimienta negra recién molida. Puedes añadir aquí el pollo y dejarlo macerar <br>
         durante una hora o, puedes pasar directamente al siguiente paso.</li>
-    <li><strong>2.</strong>En una sartén a fuego medio, añadimos un chorrito de aceite. <br>
+    <li>En una sartén a fuego medio, añadimos un chorrito de aceite. <br>
         Cuando esté caliente añadimos la cebolla picada muy finamente. <br>
         Salpimentamos y dejamos cocinar 5 minutos, mientras removemos de vez en cuando con una cuchara de palo.</li>
-    <li><strong>3.</strong>Seguimos con la receta del pollo a la naranja. Pasado el tiempo, <br>
+    <li>Seguimos con la receta del pollo a la naranja. Pasado el tiempo, <br>
         subimos la potencia del fuego y añadimos las pechugas de pollo,<br>
         que ya están previamente cortadas en tamaño de bocado y salpimentadas.<br>
         Mezclamos con la cebolla y sellamos los taquitos durante un par de minutos.</li>
-    <li><strong>4.</strong>Hecho esto, añadimos la salsa que habíamos preparado al principio. <br>
+    <li>Hecho esto, añadimos la salsa que habíamos preparado al principio. <br>
         Bajamos la potencia del fuego y vamos cocinando a fuego suave, <br>
         mientras mezclamos con la cuchara. La salsa irá reduciéndose un poco <br>
         mientras también se va espesando por efecto de la maizena. Finalmente, <br>
         puedes espolvorear con perejil fresco.</li>
     
 </ol>
+
