--- a/recipies/pasta.html
+++ b/recipies/pasta.html
@@ -1,5 +1,6 @@
+
 <h1>Pasta</h1>
-<img src="./imgs/pasta.jpeg" alt="pasta_img">
+<img src="../imgs/pasta.jpeg" alt="pasta_img">
 <h2>Description</h2>
 <p>
   This recipe is too easy, will just put water whith salt in the cooking pot <br>
@@ -29,3 +30,4 @@
     <li>Step 7: Removing Ravioli.</li>
     <li>Step 8: Stir in the Sauce.</li>
 </ol>
+
