--- a/recepies/pancake.html
+++ b/recepies/pancake.html
@@ -3,7 +3,7 @@
 <h2>Description</h2>
 <p>
     Learn a skill for life with our foolproof crêpe recipe that ensures perfect pancakes every time, <br>
-     elaborate flip optional
+     elaborate flip optional.
 </p>
 
 <h3>Ingredients</h3>
